# LibOVR

./: CMakeLists.txt  LibOVR-vse2013.vcxproj  LibOVR-vse2013.vcxproj.filters  Release_Notes.txt
Src/: CMakeLists.txt  OVR_Profile.cpp
Src/CAPI/: CMakeLists.txt
Src/Displays/: CMakeLists.txt  OVR_Win32_Display.cpp  OVR_Win32_RenderShim.cpp
Src/Kernel/: CMakeLists.txt  OVR_DebugHelp.cpp
Src/Net/: CMakeLists.txt
Src/Service/: CMakeLists.txt
Src/Tracking/: CMakeLists.txt
Src/Util/: CMakeLists.txt  Util_ImageWindow.cpp
