add_subdirectory(CAPI)
add_subdirectory(Kernel)
add_subdirectory(Displays)
add_subdirectory(Service)
add_subdirectory(Net)
add_subdirectory(Tracking)
add_subdirectory(Util)
add_library(OVR
            OVR_CAPI.cpp
            OVR_JSON.cpp
            OVR_Profile.cpp
            OVR_SerialFormat.cpp
            OVR_Stereo.cpp)
target_link_libraries(OVR
                      OVR-CAPI
                      OVR-Kernel
                      OVR-Displays
                      OVR-Service
                      OVR-Net
                      OVR-Tracking
                      OVR-Util)
